--- a/index.html
+++ b/index.html
@@ -3,9 +3,114 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+  </style>
+  <link rel="stylesheet" href="/stylesheet.css">
   <title>Laboratorio2</title>
 </head>
 <body>
-
+  <header>
+      <div class="container header">
+        <div class="imghead">
+        <img src="./images/icon-menu-burguer.svg" alt="Icono menu">
+        </div>
+        <div class="containermoda">
+          <div class="card">MODA MUJER</div>
+          <div class="card">MODA HOMBRE</div>
+          <div class="card">NUEVA COLECCIÓN</div>
+          <div class="card">COLECCIONES ESPECIALES</div>
+        </div>
+        <div class="iconheader">
+          <img src="./images/icon-user.svg" alt="Icono de usuario" title="Icono de usuario">
+          <img src="./images/icon-heart.svg" alt="Icono favoritos" title="Icono favoritos">
+          <img src="./images/icon-shopping-cart.svg" alt="icono carro de la compra" title="Icono carro de la compra">
+        </div>
+      </div>
+  </header>
+  <main>
+    <div class="container gridcontent">
+      <p class="newcolections">NUEVAS COLECCIONES</p>
+      <div class="card">
+        <img class="imgcard" src="./images/vestido-mujer-azul.jpg" alt="vestido-mujer-azul">
+        <div class="textcard">
+          <p>
+            Vestido
+          </p>
+          <p class="price">34.99 €</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="imgcard" src="./images/vestido-amarillo.jpg" alt="vestido-amarillo">
+        <div class="textcard">
+          <p>
+            Camisa
+          </p>
+          <p class="price">44.99 €</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="imgcard" src="./images/vestido-blanco.jpg" alt="Pantalon blanco">
+        <div class="textcard">
+          <p>
+            Vaquero
+          </p>
+          <p class="price">79.99 €</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="imgcard" src="./images/polo-beige.jpg" alt="polo-beige">
+        <div class="textcard">
+          <p>
+            Polo
+          </p>
+          <p class="price">44.95 €</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="imgcard" src="./images/camisa-blanca.jpg" alt="Camisa Blanca">
+        <div class="textcard">
+          <p>
+            Camisa
+          </p>
+          <p class="price">25.00 €</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="imgcard" src="./images/polo-blanco.jpg" alt="polo-blanco">
+        <div class="textcard">
+          <p>
+            Camiseta
+          </p>
+          <p class="price">22.99 €</p>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="container foot">
+      <div class="imgfoot">
+        <div class="circle">
+          <img class="imgcircle" src="./images/icon-truck.svg" alt="Icono camión entrega">
+        </div>
+        <p>Entrega</p>
+      </div>
+      <div>
+        <p>  Devoluciones y cambios</p>
+     </div>
+      <div class="imgfoot">
+        <div class="circle">
+          <img class="imgcircle" src="./images/icon-phone.svg" alt="Icono telefono">
+        </div>
+        <p>+375(29) 749-18-23</p>
+      </div>
+      <div class="imgfoot">
+        <div class="circle">
+          <img class="imgcircle" src="./images/icon-mail.svg" alt="Icono mail">
+        </div>
+        <p>shop@amix.com</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
