cambios en main

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
       </div>
   </header>
   <main>
+    <div class="newcolections">
+      <p class="letternewcolections">NUEVAS COLECCIONES</p>
+    </div>
     <div class="container gridcontent">
-      <p class="newcolections">NUEVAS COLECCIONES</p>
       <div class="card">
         <img class="imgcard" src="./images/vestido-mujer-azul.jpg" alt="vestido-mujer-azul">
         <div class="textcard">
