media query finalizada

--- a/index.html
+++ b/index.html
@@ -12,20 +12,34 @@
 <body>
   <header>
       <div class="container header">
-        <div class="imghead">
-        <img src="./images/icon-menu-burguer.svg" alt="Icono menu">
-        </div>
-        <div class="containermoda">
-          <div class="card">MODA MUJER</div>
-          <div class="card">MODA HOMBRE</div>
-          <div class="card">NUEVA COLECCIÓN</div>
-          <div class="card">COLECCIONES ESPECIALES</div>
-        </div>
-        <div class="iconheader">
-          <img src="./images/icon-user.svg" alt="Icono de usuario" title="Icono de usuario">
-          <img src="./images/icon-heart.svg" alt="Icono favoritos" title="Icono favoritos">
-          <img src="./images/icon-shopping-cart.svg" alt="icono carro de la compra" title="Icono carro de la compra">
-        </div>
+        <nav>
+          <div class="imghead">
+          <img src="./images/icon-menu-burguer.svg" alt="Icono menu">
+          </div>
+          <ul>
+            <div class="containermoda">
+              <li>
+                <div class="card">MODA MUJER</div>
+              </li>
+              <li>
+                <div class="card">MODA HOMBRE</div>
+              </li>
+              <li>
+                <div class="card">NUEVA COLECCIÓN</div>
+              </li>
+              <li>
+                <div class="card">COLECCIONES ESPECIALES</div>
+              </li>
+            </div>
+          </ul>
+          <ul>
+            <div class="iconheader">
+              <img src="./images/icon-user.svg" alt="Icono de usuario" title="Icono de usuario">
+              <img src="./images/icon-heart.svg" alt="Icono favoritos" title="Icono favoritos">
+              <img src="./images/icon-shopping-cart.svg" alt="icono carro de la compra" title="Icono carro de la compra">
+            </div>
+          </ul>
+        </nav>
       </div>
   </header>
   <main>
@@ -97,7 +111,7 @@
         </div>
         <p>Entrega</p>
       </div>
-      <div>
+      <div class="imgfoot">
         <p>  Devoluciones y cambios</p>
      </div>
       <div class="imgfoot">
