--- a/index.html
+++ b/index.html
@@ -19,16 +19,24 @@
           <ul>
             <div class="containermoda">
               <li>
-                <div class="card">MODA MUJER</div>
+                <div class="card head">
+                  <p>MODA MUJER</p>
+                </div>
               </li>
               <li>
-                <div class="card">MODA HOMBRE</div>
+                <div class="card head" >
+                  <p>MODA HOMBRE</p>
+                </div>
               </li>
               <li>
-                <div class="card">NUEVA COLECCIÓN</div>
+                <div class="card head">
+                  <p>NUEVA COLECCIÓN</p>
+                </div>
               </li>
               <li>
-                <div class="card">COLECCIONES ESPECIALES</div>
+                <div class="card head">
+                  <p>COLECCIONES ESPECIALES</p>
+                </div>
               </li>
             </div>
           </ul>
