--- a/index.html
+++ b/index.html
@@ -14,99 +14,97 @@
       <div class="container header">
         <nav>
           <div class="imghead">
-          <img src="./images/icon-menu-burguer.svg" alt="Icono menu">
+            <a href="">
+              <img src="./images/icon-menu-burguer.svg" alt="Icono menu">
+            </a>
           </div>
+        <div class="menu">
           <ul>
-            <div class="containermoda">
               <li>
-                <div class="card head">
-                  <p>MODA MUJER</p>
-                </div>
+                  <a href="">MODA MUJER</a>
               </li>
               <li>
-                <div class="card head" >
-                  <p>MODA HOMBRE</p>
-                </div>
+                  <a href="">MODA HOMBRE</a>
               </li>
               <li>
-                <div class="card head">
-                  <p>NUEVA COLECCIÓN</p>
-                </div>
+                  <a href="">NUEVA COLECCIÓN</a>
               </li>
               <li>
-                <div class="card head">
-                  <p>COLECCIONES ESPECIALES</p>
-                </div>
+                  <a href="">COLECCIONES ESPECIALES</a>
               </li>
-            </div>
           </ul>
-          <ul>
-            <div class="iconheader">
-              <img src="./images/icon-user.svg" alt="Icono de usuario" title="Icono de usuario">
-              <img src="./images/icon-heart.svg" alt="Icono favoritos" title="Icono favoritos">
-              <img src="./images/icon-shopping-cart.svg" alt="icono carro de la compra" title="Icono carro de la compra">
-            </div>
-          </ul>
+        </div>
+          <div class="iconheader">
+            <a href="">
+              <img src="./images/icon-user.svg" alt="Icono de usuario inicio de sesión" title="inicio de sesión">
+            </a>
+            <a href="">
+              <img src="./images/icon-heart.svg" alt="Icono favoritos" title="favoritos">
+            </a>
+            <a href="">
+              <img src="./images/icon-shopping-cart.svg" alt="icono carro de la compra" title="carro de la compra">
+            </a>
+          </div>
         </nav>
       </div>
   </header>
   <main>
-    <div class="newcolections">
-      <p class="letternewcolections">NUEVAS COLECCIONES</p>
-    </div>
-    <div class="container gridcontent">
-      <div class="card">
-        <img class="imgcard" src="./images/vestido-mujer-azul.jpg" alt="vestido-mujer-azul">
-        <div class="textcard">
-          <p>
-            Vestido
-          </p>
-          <p class="price">34.99 €</p>
+    <div class="container">
+      <h2 class="letternewcolections"> NUEVAS COLECCIONES</h2>
+      <div class="cards gridcontent">
+        <div class="card">
+          <img class="imgcard" src="./images/vestido-mujer-azul.jpg" alt="vestido-mujer-azul">
+          <div class="textcard">
+            <p>
+              Vestido
+            </p>
+            <p class="price">34.99 €</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img class="imgcard" src="./images/vestido-amarillo.jpg" alt="vestido-amarillo">
-        <div class="textcard">
-          <p>
-            Camisa
-          </p>
-          <p class="price">44.99 €</p>
+        <div class="card">
+          <img class="imgcard" src="./images/vestido-amarillo.jpg" alt="vestido-amarillo">
+          <div class="textcard">
+            <p>
+              Camisa
+            </p>
+            <p class="price">44.99 €</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img class="imgcard" src="./images/vestido-blanco.jpg" alt="Pantalon blanco">
-        <div class="textcard">
-          <p>
-            Vaquero
-          </p>
-          <p class="price">79.99 €</p>
+        <div class="card">
+          <img class="imgcard" src="./images/vestido-blanco.jpg" alt="Pantalon blanco">
+          <div class="textcard">
+            <p>
+              Vaquero
+            </p>
+            <p class="price">79.99 €</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img class="imgcard" src="./images/polo-beige.jpg" alt="polo-beige">
-        <div class="textcard">
-          <p>
-            Polo
-          </p>
-          <p class="price">44.95 €</p>
+        <div class="card">
+          <img class="imgcard" src="./images/polo-beige.jpg" alt="polo-beige">
+          <div class="textcard">
+            <p>
+              Polo
+            </p>
+            <p class="price">44.95 €</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img class="imgcard" src="./images/camisa-blanca.jpg" alt="Camisa Blanca">
-        <div class="textcard">
-          <p>
-            Camisa
-          </p>
-          <p class="price">25.00 €</p>
+        <div class="card">
+          <img class="imgcard" src="./images/camisa-blanca.jpg" alt="Camisa Blanca">
+          <div class="textcard">
+            <p>
+              Camisa
+            </p>
+            <p class="price">25.00 €</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img class="imgcard" src="./images/polo-blanco.jpg" alt="polo-blanco">
-        <div class="textcard">
-          <p>
-            Camiseta
-          </p>
-          <p class="price">22.99 €</p>
+        <div class="card">
+          <img class="imgcard" src="./images/polo-blanco.jpg" alt="polo-blanco">
+          <div class="textcard">
+            <p>
+              Camiseta
+            </p>
+            <p class="price">22.99 €</p>
+          </div>
         </div>
       </div>
     </div>
